fixed but on services page with About section appearing off centre

--- a/assets/style.css
+++ b/assets/style.css
@@ -182,7 +182,7 @@ nav {
 
 .about {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     align-items: center;
     color: #31708e;
     margin: 10px 0px 30px 0px;
